--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,8 @@
-name: Build and Release
+name: Build
 on: [ push ]
 jobs:
-  build_and_upload:
-    name: Build and Upload
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
@@ -15,13 +15,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Execute Gradle jar
-        run: gradle jar
-
-      - uses: bacongobbler/azure-blob-storage-upload@main
-        with:
-          source_dir: build/libs  # This folder should contain only the Jar file
-          container_name: www
-          account_name: saggyresourcepack
-          sas_token: ${{ secrets.StorageSAS }}
-          overwrite: 'true'
+      - name: Execute Gradle build
+        run: gradle build
