Publish plugin to github packages

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,8 @@
-name: Build
+name: Build and Publish
 on: [ push ]
 jobs:
   build:
-    name: Build
+    name: Build and Publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
@@ -11,9 +11,11 @@ jobs:
         with:
           distribution: temurin
           java-version: 16
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      - name: Execute Gradle build
-        run: gradle build
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Publish package
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
