add version again to build gradle

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ publishing {
         mavenJava(MavenPublication) {
             groupId 'beansplusplus.gameconfig'
             artifactId 'gameconfigplugin'
+            version '1.0-SNAPSHOT'
 
             from components.java
         }
