--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,8 @@
 name: Build and Publish
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
 jobs:
   make-jar:
     name: Build and Upload jar
