--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'maven-publish'
 }
 
-group 'beansplusplus.gameconfig'
+group 'beansplusplus'
 version '1.0-SNAPSHOT'
 
 java {
@@ -26,7 +26,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = "https://maven.pkg.github.com/BeansPlusPlus/GameConfigPlugin"
+            url = "https://maven.pkg.github.com/BeansPlusPlus/BeansGamePlugin"
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
@@ -36,8 +36,8 @@ publishing {
 
     publications {
         mavenJava(MavenPublication) {
-            groupId 'beansplusplus.gameconfig'
-            artifactId 'gameconfigplugin'
+            groupId 'beansplusplus'
+            artifactId 'beansgameplugin'
             version '1.0-SNAPSHOT'
 
             from components.java
