--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,27 @@
-main: beansplusplus.gameconfig.GameConfigPlugin
-name: GameConfigPlugin
+main: beansplusplus.beansgameplugin.BeansGamePlugin
+name: BeansGamePlugin
 version: 1
 api-version: 1.19
 description: >
-  Create configs from
+  Beans gamemode wrapper
 commands:
   config:
     description: >
       Configure game settings
+  start:
+    description: >
+      Start game
+  stop:
+    description: >
+      Stop game
+  reset:
+    description: >
+      Reset game
+  pause:
+    description: >
+      Force pause the game
+  continue:
+    description: >
+      Unpause a paused game
+    aliases:
+      - unpause
